--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     body {
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         margin: 10px;
-        background-color: #e9ecef;
+        background-color: #f2f2f2;
         display: flex;
         justify-content: center;
         font-size: 14px;
@@ -19,35 +19,77 @@
         padding: 30px;
         border-radius: 8px;
         box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-        border-top: 5px solid #dc3545;
+        border-top: 5px solid #808080;
     }
-    h1 { text-align: center; color: #dc3545; margin-bottom: 25px; font-size: 16px; }
-    h2 { font-size: 14px; color: #343a40; border-bottom: 1px solid #dee2e6;
-         padding-bottom: 5px; margin-top: 20px; margin-bottom: 10px; }
-    label { display: block; font-weight: 600; margin-bottom: 5px; color: #343a40; }
+    h1 { 
+        text-align: center; 
+        color: #808080; 
+        margin-bottom: 25px; 
+        font-size: 16px; 
+    }
+    h2 { 
+        font-size: 14px; 
+        color: #343a40; 
+        border-bottom: 1px solid #808080;
+        padding-bottom: 5px; 
+        margin-top: 20px; 
+        margin-bottom: 10px; 
+    }
+    label { 
+        display: block; 
+        font-weight: 600; 
+        margin-bottom: 5px; 
+        color: #343a40; 
+    }
     input[type="text"], input[type="date"], textarea {
-        width: 100%; padding: 7px; border: 1px solid #ced4da;
-        border-radius: 4px; box-sizing: border-box; font-size: 14px;
+        width: 100%; 
+        padding: 7px; 
+        border: 1px solid #ced4da;
+        border-radius: 4px; 
+        box-sizing: border-box; 
+        font-size: 14px;
     }
     textarea { resize: vertical; }
     table {
-        width: 100%; border-collapse: collapse; margin-top: 15px; table-layout: fixed;
+        width: 100%; 
+        border-collapse: collapse; 
+        margin-top: 15px; 
+        table-layout: fixed;
         font-size: 14px;
     }
     th, td { border: 1px solid #dee2e6; padding: 7px; text-align: left; }
-    th { background-color: #f8f9fa; color: #495057; text-align: center; }
+    th { background-color: #f0f0f0; color: #343a40; text-align: center; }
     table th:nth-child(1), table td:nth-child(1) { width: 55%; } 
     table th:nth-child(2), table td:nth-child(2) { width: 20%; text-align: center; } 
     table th:nth-child(3), table td:nth-child(3) { width: 25%; text-align: right; } 
-    .table-controls, .action-buttons { display: flex; justify-content: flex-start; gap: 10px; margin-top: 10px; margin-bottom: 20px; }
-    .button {
-        padding: 7px 12px; border: none; border-radius: 4px; cursor: pointer;
-        font-size: 14px; color: white; transition: background-color 0.3s;
+    .table-controls, .action-buttons { 
+        display: flex; 
+        justify-content: flex-start; 
+        gap: 10px; 
+        margin-top: 10px; 
+        margin-bottom: 20px; 
     }
-    .add-row-btn { background-color: #28a745; }
-    .delete-row-btn { background-color: #dc3545; }
-    .submit-btn { background-color: #007bff; }
-    .note { background-color: #e2f2ff; border-left: 4px solid #007bff; padding: 8px; margin-top: 20px; font-size: 12px; color: #004085; }
+    .button {
+        padding: 7px 12px; 
+        border: none; 
+        border-radius: 4px; 
+        cursor: pointer;
+        font-size: 14px; 
+        color: white; 
+        transition: background-color 0.3s;
+    }
+    .add-row-btn { background-color: #808080; }
+    .delete-row-btn { background-color: #999999; }
+    .submit-btn { background-color: #808080; }
+    .button:hover { opacity: 0.85; }
+    .note { 
+        background-color: #eeeeee; 
+        border-left: 4px solid #808080; 
+        padding: 8px; 
+        margin-top: 20px; 
+        font-size: 12px; 
+        color: #333333; 
+    }
 </style>
 </head>
 <body>
@@ -119,11 +161,11 @@
     
     <div class="action-buttons">
         <button type="button" class="button submit-btn" onclick="submitForm()">✅ Submit Permintaan</button>
-        <a href="database_mpr.html" class="button" style="background-color: #ffc107; color: #343a40; text-decoration: none; padding: 7px 12px; border-radius: 4px;">Lihat Database</a>
+        <a href="database_mpr.html" class="button" style="background-color: #b3b3b3; color: #fff; text-decoration: none; padding: 7px 12px; border-radius: 4px;">Lihat Database</a>
     </div>
 
     <div class="note">
-        **Penting:** Lakukan cek sebelum submit
+        **Penting:** Lakukan cek sebelum submit.
     </div>
 </div>
 
@@ -147,96 +189,110 @@ firebase.initializeApp(firebaseConfig);
 const db = firebase.firestore();
 
 // 🧭 Generate otomatis nomor & tanggal
-window.onload = function() {
-    const dateField = document.getElementById('requestDate');
-    const docField = document.getElementById('docNumber');
-    const today = new Date();
-    const yyyy = today.getFullYear();
-    let mm = today.getMonth() + 1;
-    let dd = today.getDate();
-    if (mm < 10) mm = '0' + mm;
-    if (dd < 10) dd = '0' + dd;
-    dateField.value = `${yyyy}-${mm}-${dd}`;
-    const yy = String(yyyy).slice(2);
-    const docDate = yy + mm + dd; 
-    const storedData = JSON.parse(localStorage.getItem('mpr_sequential_data')) || {};
-    const lastDate = storedData.lastDate || '';
-    let sequentialNum = storedData.sequentialNum || 0;
-    if (lastDate !== docDate) sequentialNum = 0;
-    const displayNum = sequentialNum + 1;
-    docField.value = `MPR/${docDate}/${String(displayNum).padStart(5,'0')}`;
+window.onload = async function() {
+  const dateField = document.getElementById('requestDate');
+  const docField = document.getElementById('docNumber');
+
+  const today = new Date();
+  const yyyy = today.getFullYear();
+  const yy = String(yyyy).slice(2);
+  let mm = today.getMonth() + 1;
+  let dd = today.getDate();
+  if (mm < 10) mm = '0' + mm;
+  if (dd < 10) dd = '0' + dd;
+  dateField.value = `${yyyy}-${mm}-${dd}`;
+  const docDate = yy + mm + dd;
+
+  // 🔹 Ambil nomor urut terakhir dari Firestore berdasarkan tahun
+  const counterRef = db.collection("mpr_counter").doc(String(yyyy));
+  const counterDoc = await counterRef.get();
+  let nextNumber = 1;
+
+  if (counterDoc.exists) {
+    const currentNum = counterDoc.data().lastNumber || 0;
+    nextNumber = currentNum + 1;
+  }
+
+  // 🔹 Tampilkan nomor dokumen
+  docField.value = `MPR/${docDate}/${String(nextNumber).padStart(5,'0')}`;
 };
 
 // ➕ Tambah baris tabel
 function addRow() {
-    const tableBody = document.querySelector('#materialTable tbody');
-    const newRow = tableBody.insertRow();
-    newRow.insertCell(0).innerHTML = '<input type="text" class="material-name">';
-    newRow.insertCell(1).innerHTML = '<input type="text" class="material-unit">';
-    newRow.insertCell(2).innerHTML = '<input type="text" class="material-qty" style="text-align:right">';
+  const tableBody = document.querySelector('#materialTable tbody');
+  const newRow = tableBody.insertRow();
+  newRow.insertCell(0).innerHTML = '<input type="text" class="material-name">';
+  newRow.insertCell(1).innerHTML = '<input type="text" class="material-unit">';
+  newRow.insertCell(2).innerHTML = '<input type="text" class="material-qty" style="text-align:right">';
 }
 
 // ➖ Hapus baris
 function deleteRow() {
-    const tableBody = document.querySelector('#materialTable tbody');
-    if (tableBody.rows.length > 2) tableBody.deleteRow(tableBody.rows.length - 1);
-    else alert("Minimal harus ada 2 baris detail material.");
+  const tableBody = document.querySelector('#materialTable tbody');
+  if (tableBody.rows.length > 2) tableBody.deleteRow(tableBody.rows.length - 1);
+  else alert("Minimal harus ada 2 baris detail material.");
 }
 
 // 🚀 Submit ke Firestore
 async function submitForm() {
-    const dept = document.getElementById('deptPemohon').value.trim();
-    const nama = document.getElementById('namaPemohon').value.trim();
-    const buyer = document.getElementById('buyerStyle').value.trim(); 
-    const alasan = document.getElementById('alasanReject').value.trim();
-    const docNum = document.getElementById('docNumber').value;
-    const date = document.getElementById('requestDate').value;
+  const dept = document.getElementById('deptPemohon').value.trim();
+  const nama = document.getElementById('namaPemohon').value.trim();
+  const buyer = document.getElementById('buyerStyle').value.trim(); 
+  const alasan = document.getElementById('alasanReject').value.trim();
+  const docNum = document.getElementById('docNumber').value;
+  const date = document.getElementById('requestDate').value;
 
-    if (!dept || !nama || !buyer || !alasan) {
-        alert("⚠️ Lengkapi semua field wajib (Data Pemohon, Buyer/Style, dan Alasan Reject).");
-        return;
-    }
+  if (!dept || !nama || !buyer || !alasan) {
+    alert("⚠️ Lengkapi semua field wajib (Data Pemohon, Buyer/Style, dan Alasan Reject).");
+    return;
+  }
 
-    const materials = [];
-    const rows = document.querySelectorAll('#materialTable tbody tr');
-    rows.forEach(row => {
-        const name = row.querySelector('.material-name').value.trim();
-        const unit = row.querySelector('.material-unit').value.trim();
-        const qty = row.querySelector('.material-qty').value.trim();
-        if (name || unit || qty) materials.push({ nama_barang: name, satuan: unit, jumlah: qty });
-    });
+  const materials = [];
+  const rows = document.querySelectorAll('#materialTable tbody tr');
+  rows.forEach(row => {
+    const name = row.querySelector('.material-name').value.trim();
+    const unit = row.querySelector('.material-unit').value.trim();
+    const qty = row.querySelector('.material-qty').value.trim();
+    if (name || unit || qty) materials.push({ nama_barang: name, satuan: unit, jumlah: qty });
+  });
 
-    if (materials.length === 0) {
-        alert("⚠️ Harap isi minimal satu baris Detail Material.");
-        return;
-    }
+  if (materials.length === 0) {
+    alert("⚠️ Harap isi minimal satu baris Detail Material.");
+    return;
+  }
 
-    const data = {
-        nomor_dokumen: docNum,
-        tanggal_dibuat: date,
-        departemen: dept,
-        pemohon: nama,
-        buyer_style: buyer,
-        alasan_reject: alasan,
-        detail_material: materials,
-        status: "Submitted",
-        timestamp: firebase.firestore.FieldValue.serverTimestamp()
-    };
+  const data = {
+    nomor_dokumen: docNum,
+    tanggal_dibuat: date,
+    tahun_dokumen: new Date(date).getFullYear(),
+    departemen: dept,
+    pemohon: nama,
+    buyer_style: buyer,
+    alasan_reject: alasan,
+    detail_material: materials,
+    status: "Submitted",
+    timestamp: firebase.firestore.FieldValue.serverTimestamp()
+  };
 
-    try {
-        await db.collection("mpr_requests").add(data);
-        // Simpan urutan nomor di localStorage
-        const parts = docNum.split("/");
-        const docDate = parts[1];
-        const currentNum = parseInt(parts[2]);
-        localStorage.setItem('mpr_sequential_data', JSON.stringify({ lastDate: docDate, sequentialNum: currentNum }));
+  try {
+    await db.collection("mpr_requests").add(data);
 
-        alert(`✅ Data berhasil dikirim ke Firestore (${docNum}).`);
-        window.location.href = "database_mpr.html";
-    } catch (error) {
-        console.error("Error:", error);
-        alert("❌ Gagal mengirim data ke Firestore. Lihat console untuk detail.");
-    }
+    // 🔹 Update counter berdasarkan tahun
+    const today = new Date();
+    const yyyy = today.getFullYear();
+    const parts = docNum.split("/");
+    const currentNum = parseInt(parts[2]);
+    await db.collection("mpr_counter").doc(String(yyyy)).set(
+      { lastNumber: currentNum },
+      { merge: true }
+    );
+
+    alert(`✅ Data berhasil dikirim ke Firestore (${docNum}).`);
+    window.location.href = "database_mpr.html";
+  } catch (error) {
+    console.error("Error:", error);
+    alert("❌ Gagal mengirim data ke Firestore. Lihat console untuk detail.");
+  }
 }
 </script>
 </body>
