--- a/index.html
+++ b/index.html
@@ -21,75 +21,33 @@
         box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
         border-top: 5px solid #808080;
     }
-    h1 { 
-        text-align: center; 
-        color: #808080; 
-        margin-bottom: 25px; 
-        font-size: 16px; 
-    }
-    h2 { 
-        font-size: 14px; 
-        color: #343a40; 
-        border-bottom: 1px solid #808080;
-        padding-bottom: 5px; 
-        margin-top: 20px; 
-        margin-bottom: 10px; 
-    }
-    label { 
-        display: block; 
-        font-weight: 600; 
-        margin-bottom: 5px; 
-        color: #343a40; 
-    }
+    h1 { text-align: center; color: #808080; margin-bottom: 25px; font-size: 16px; }
+    h2 { font-size: 14px; color: #343a40; border-bottom: 1px solid #808080; padding-bottom: 5px; margin-top: 20px; margin-bottom: 10px; }
+    label { display: block; font-weight: 600; margin-bottom: 5px; color: #343a40; }
     input[type="text"], input[type="date"], textarea {
-        width: 100%; 
-        padding: 7px; 
-        border: 1px solid #ced4da;
-        border-radius: 4px; 
-        box-sizing: border-box; 
-        font-size: 14px;
+        width: 100%; padding: 7px; border: 1px solid #ced4da;
+        border-radius: 4px; box-sizing: border-box; font-size: 14px;
     }
     textarea { resize: vertical; }
     table {
-        width: 100%; 
-        border-collapse: collapse; 
-        margin-top: 15px; 
-        table-layout: fixed;
-        font-size: 14px;
+        width: 100%; border-collapse: collapse; margin-top: 15px;
+        table-layout: fixed; font-size: 14px;
     }
     th, td { border: 1px solid #dee2e6; padding: 7px; text-align: left; }
     th { background-color: #f0f0f0; color: #343a40; text-align: center; }
     table th:nth-child(1), table td:nth-child(1) { width: 55%; } 
     table th:nth-child(2), table td:nth-child(2) { width: 20%; text-align: center; } 
     table th:nth-child(3), table td:nth-child(3) { width: 25%; text-align: right; } 
-    .table-controls, .action-buttons { 
-        display: flex; 
-        justify-content: flex-start; 
-        gap: 10px; 
-        margin-top: 10px; 
-        margin-bottom: 20px; 
-    }
+    .table-controls, .action-buttons { display: flex; justify-content: flex-start; gap: 10px; margin-top: 10px; margin-bottom: 20px; }
     .button {
-        padding: 7px 12px; 
-        border: none; 
-        border-radius: 4px; 
-        cursor: pointer;
-        font-size: 14px; 
-        color: white; 
-        transition: background-color 0.3s;
+        padding: 7px 12px; border: none; border-radius: 4px; cursor: pointer;
+        font-size: 14px; color: white; transition: background-color 0.3s;
     }
     .add-row-btn { background-color: #808080; }
     .delete-row-btn { background-color: #999999; }
     .submit-btn { background-color: #808080; }
     .button:hover { opacity: 0.85; }
-    .note { 
-        background-color: #eeeeee; 
-        border-left: 4px solid #808080; 
-        padding: 8px; 
-        margin-top: 20px; 
-        font-size: 12px; 
-        color: #333333; 
-    }
+    .note { background-color: #eeeeee; border-left: 4px solid #808080; padding: 8px; margin-top: 20px; font-size: 12px; color: #333333; }
 </style>
 </head>
 <body>
@@ -169,130 +127,125 @@
     </div>
 </div>
 
-<!-- 🔥 Firebase SDK -->
+<!-- Firebase -->
 <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-firestore-compat.js"></script>
 
 <script>
-// 🔧 Konfigurasi Firebase
 const firebaseConfig = {
   apiKey: "AIzaSyACOluEhfPw4JBlBaHyXtf1k3TIJAHikKo",
   authDomain: "inventory-gudang-16dfe.firebaseapp.com",
   projectId: "inventory-gudang-16dfe",
   storageBucket: "inventory-gudang-16dfe.appspot.com",
   messagingSenderId: "663364522026",
-  appId: "1:663364522026:web:f48fb1ba0331695de83353",
-  measurementId: "G-NM1JKR9W8V"
+  appId: "1:663364522026:web:f48fb1ba0331695de83353"
 };
-
 firebase.initializeApp(firebaseConfig);
 const db = firebase.firestore();
 
-// 🧭 Generate otomatis nomor & tanggal
-window.onload = async function() {
-  const dateField = document.getElementById('requestDate');
+// ✅ Generate nomor MR aman, hanya sekali per session
+async function generateMRNumber() {
   const docField = document.getElementById('docNumber');
+  const dateField = document.getElementById('requestDate');
 
   const today = new Date();
-  const yyyy = today.getFullYear();
-  const yy = String(yyyy).slice(2);
-  let mm = today.getMonth() + 1;
-  let dd = today.getDate();
-  if (mm < 10) mm = '0' + mm;
-  if (dd < 10) dd = '0' + dd;
-  dateField.value = `${yyyy}-${mm}-${dd}`;
-  const docDate = yy + mm + dd;
+  const year = today.getFullYear();
+  const month = String(today.getMonth() + 1).padStart(2, '0');
+  const day = String(today.getDate()).padStart(2, '0');
+  const dateCode = `${year}${month}${day}`;
+  dateField.value = today.toISOString().split('T')[0];
 
-  // 🔹 Ambil nomor urut terakhir dari Firestore berdasarkan tahun
-  const counterRef = db.collection("mpr_counter").doc(String(yyyy));
-  const counterDoc = await counterRef.get();
-  let nextNumber = 1;
-
-  if (counterDoc.exists) {
-    const currentNum = counterDoc.data().lastNumber || 0;
-    nextNumber = currentNum + 1;
+  // cek sessionStorage dulu
+  const storedMR = sessionStorage.getItem('currentMR');
+  if (storedMR) {
+    docField.value = storedMR;
+    return;
   }
 
-  // 🔹 Tampilkan nomor dokumen
-  docField.value = `MPR/${docDate}/${String(nextNumber).padStart(5,'0')}`;
-};
+  const counterRef = db.collection("mpr_requests").doc(String(year));
 
-// ➕ Tambah baris tabel
-function addRow() {
-  const tableBody = document.querySelector('#materialTable tbody');
-  const newRow = tableBody.insertRow();
-  newRow.insertCell(0).innerHTML = '<input type="text" class="material-name">';
-  newRow.insertCell(1).innerHTML = '<input type="text" class="material-unit">';
-  newRow.insertCell(2).innerHTML = '<input type="text" class="material-qty" style="text-align:right">';
+  try {
+    const newDocNumber = await db.runTransaction(async (transaction) => {
+      const counterDoc = await transaction.get(counterRef);
+      let nextNum = 1;
+      if (counterDoc.exists) {
+        const data = counterDoc.data();
+        nextNum = (data.lastNumber || 0) + 1;
+      }
+      transaction.set(counterRef, { lastNumber: nextNum }, { merge: true });
+      return `MR/${dateCode}/${String(nextNum).padStart(5, '0')}`;
+    });
+
+    docField.value = newDocNumber;
+    sessionStorage.setItem('currentMR', newDocNumber); // simpan di session
+  } catch (e) {
+    console.error("Error generate MR number:", e);
+    docField.value = "MR/ERROR";
+  }
 }
 
-// ➖ Hapus baris
+document.addEventListener("DOMContentLoaded", generateMRNumber);
+
+// ➕ tambah baris
+function addRow() {
+  const tbody = document.querySelector('#materialTable tbody');
+  const row = tbody.insertRow();
+  row.insertCell(0).innerHTML = '<input type="text" class="material-name">';
+  row.insertCell(1).innerHTML = '<input type="text" class="material-unit">';
+  row.insertCell(2).innerHTML = '<input type="text" class="material-qty" style="text-align:right">';
+}
+
+// ➖ hapus baris
 function deleteRow() {
-  const tableBody = document.querySelector('#materialTable tbody');
-  if (tableBody.rows.length > 2) tableBody.deleteRow(tableBody.rows.length - 1);
-  else alert("Minimal harus ada 2 baris detail material.");
+  const tbody = document.querySelector('#materialTable tbody');
+  if (tbody.rows.length > 2) tbody.deleteRow(-1);
+  else alert("Minimal 2 baris.");
 }
 
 // 🚀 Submit ke Firestore
 async function submitForm() {
   const dept = document.getElementById('deptPemohon').value.trim();
   const nama = document.getElementById('namaPemohon').value.trim();
-  const buyer = document.getElementById('buyerStyle').value.trim(); 
+  const buyer = document.getElementById('buyerStyle').value.trim();
   const alasan = document.getElementById('alasanReject').value.trim();
   const docNum = document.getElementById('docNumber').value;
   const date = document.getElementById('requestDate').value;
 
   if (!dept || !nama || !buyer || !alasan) {
-    alert("⚠️ Lengkapi semua field wajib (Data Pemohon, Buyer/Style, dan Alasan Reject).");
+    alert("Lengkapi semua field wajib.");
     return;
   }
 
   const materials = [];
-  const rows = document.querySelectorAll('#materialTable tbody tr');
-  rows.forEach(row => {
+  document.querySelectorAll('#materialTable tbody tr').forEach(row => {
     const name = row.querySelector('.material-name').value.trim();
     const unit = row.querySelector('.material-unit').value.trim();
     const qty = row.querySelector('.material-qty').value.trim();
     if (name || unit || qty) materials.push({ nama_barang: name, satuan: unit, jumlah: qty });
   });
 
-  if (materials.length === 0) {
-    alert("⚠️ Harap isi minimal satu baris Detail Material.");
+  if (!materials.length) {
+    alert("Isi minimal satu baris material.");
     return;
   }
 
   const data = {
     nomor_dokumen: docNum,
     tanggal_dibuat: date,
-    tahun_dokumen: new Date(date).getFullYear(),
     departemen: dept,
     pemohon: nama,
     buyer_style: buyer,
     alasan_reject: alasan,
     detail_material: materials,
-    status: "Submitted",
+    status: "In Process",
+    keterangan: "",
     timestamp: firebase.firestore.FieldValue.serverTimestamp()
   };
 
-  try {
-    await db.collection("mpr_requests").add(data);
-
-    // 🔹 Update counter berdasarkan tahun
-    const today = new Date();
-    const yyyy = today.getFullYear();
-    const parts = docNum.split("/");
-    const currentNum = parseInt(parts[2]);
-    await db.collection("mpr_counter").doc(String(yyyy)).set(
-      { lastNumber: currentNum },
-      { merge: true }
-    );
-
-    alert(`✅ Data berhasil dikirim ke Firestore (${docNum}).`);
-    window.location.href = "database_mpr.html";
-  } catch (error) {
-    console.error("Error:", error);
-    alert("❌ Gagal mengirim data ke Firestore. Lihat console untuk detail.");
-  }
+  await db.collection("mpr_requests").add(data);
+  alert(`✅ Data ${docNum} berhasil dikirim.`);
+  sessionStorage.removeItem('currentMR'); // hapus session setelah submit
+  window.location.href = "database_mpr.html";
 }
 </script>
 </body>
